--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+	{% include stylesheets/styles.css %}
+	{% include stylesheets/pygment_trac.css %}
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
 
@@ -15,7 +15,9 @@
 <body>
 	{{ content }}
 
-	<script src="javascripts/scale.fix.js"></script>
+	{% include javascripts/scale.fix.js %}
+
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
